fixes an overlap

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -51,7 +51,8 @@ ul {
 	font-size: 30px;
 }
 
-.places article {
+.places .article-container {
+	position: relative;
 	width: 390px;
 	padding: 20px;
 	margin: 20px;
@@ -68,12 +69,6 @@ ul {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-}
-
-.places .article-container {
-	display: flex;
-	position: relative;
-	flex-flow: column wrap;
 }
 
 .places .article-container .price_by_night {
@@ -93,4 +88,8 @@ ul {
 
 .places .article-container .information {
 	display: flex;
+	justify-content: center;
+	height: 100px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
 }
